--- a/Akinade-Ayomide.html
+++ b/Akinade-Ayomide.html
@@ -7,8 +7,9 @@
 
 <body>
 <img src="image/image-2.jpg" alt="Emmaban">
+<div>
 <h1 class="glory"><u>Website Design</u></h1>
-<p class="ama1"> My name is akinade ayomide and i am a website designer, software developer, app programmer. i am very good at what i do and also i have had about 5-years experience in this field. I would really love to work with you and make your dreams come true.</p>  
+<p class="ama1"> My name is akinade ayomide and i am a website designer, software developer, app programmer. i am very good at what i do and also i have had about 5-years experience in this field. I would really love to work with you and make your dreams come true.</p>  </div>
 	
 </body>
 </html>
