--- a/Akinade-Ayomide.html
+++ b/Akinade-Ayomide.html
@@ -10,6 +10,9 @@
 <div>
 <h1 class="glory"><u>Website Design</u></h1>
 <p class="ama1"> My name is akinade ayomide and i am a website designer, software developer, app programmer. i am very good at what i do and also i have had about 5-years experience in this field. I would really love to work with you and make your dreams come true.</p>  </div>
+
+<h1 class="glory1"><u>Contact Informations</u></h1>
+<ul class="ama2"><li>Name:Akinade Ayomide</li><br><li>Phone Number:08068236043</li><br><li>Email:emmaban156@gmail.com</li></ul>
 	
 </body>
 </html>
